# babelfish_extensions_win

./: .gitignore  build.pl
contrib/babelfishpg_common/: CMakeLists.txt  babelfishpg_common.def
contrib/babelfishpg_common/sql/: babelfishpg_common.epilogue.sql  babelfishpg_common.prologue.sql
contrib/babelfishpg_common/src/: babelfishpg_common.c  bit.c  coerce.c  collation.c  collation.h  datetime.c  datetime2.c  datetimeoffset.c  instr.h  numeric.c  smalldatetime.c  sqlvariant.c  sqlvariant.h  typecode.c  typecode.h  uniqueidentifier.c  varbinary.c  varchar.c
contrib/babelfishpg_money/: CMakeLists.txt  babelfishpg_money.def  fixeddecimal.c
contrib/babelfishpg_tds/: CMakeLists.txt  babelfishpg_tds.def
contrib/babelfishpg_tds/src/backend/fault_injection/: fault_injection.c  fault_injection_tests.c
contrib/babelfishpg_tds/src/backend/tds/: err_handler.c  support_funcs.c  tds-secure-openssl.c  tds.c  tds_srv.c  tds_win.c  tdsbulkload.c  tdslogin.c  tdsresponse.c  tdsrpc.c  tdstimestamp.c  tdstypeio.c
contrib/babelfishpg_tds/src/backend/utils/adt/: numeric.c  xml.c
contrib/babelfishpg_tds/src/include/: tds.h  tds_int.h  tds_secure.h  tds_typeio.h  tds_win.h
contrib/babelfishpg_tsql/: CMakeLists.txt  babelfishpg_tsql.def
contrib/babelfishpg_tsql/antlr/: CMakeLists.txt  TSqlLexer.g4  fix_C4566.pl
contrib/babelfishpg_tsql/runtime/: functions.c
contrib/babelfishpg_tsql/sql/: babelfishpg_tsql.epilogue.sql  babelfishpg_tsql.prologue.sql  sys_functions.sql
contrib/babelfishpg_tsql/src/: applock.c  catalog.c  catalog.h  collation.c  collationproperty.c  cursor.c  databasepropertyex.c  dbcmds.c  err_handler.c  forjson.c  format.c  forxml.c  guc.c  hooks.c  iterative_exec.c  json_funcs.c  multidb.c  pl_comp.c  pl_exec.c  pl_funcs-2.c  pl_funcs.c  pl_gram.y  pl_handler.c  pl_scanner.c  pltsql.h  pltsql_bulkcopy.c  pltsql_coerce.c  pltsql_identity.c  pltsql_ruleutils.c  pltsql_utils.c  procedures.c  properties.c  rolecmds.c  session.c  string.c  tsqlHandler.c  tsqlIface.cpp  tsqlIface.hpp  tsqlUnsupportedFeatureHandler.cpp  tsql_win.c  (+4 more)
contrib/babelfishpg_tsql/src/backend_parser/: include.pl
contrib/babelfishpg_tsql/src/tsql_for/: forxml.c
test/JDBC/: jdbc_schedule  pom.xml  run_tests.pl
test/JDBC/expected/: Test-sp_set_session_context-vu-verify.out  TestDatetimeoffset-vu-verify.out  babel_collation.out  babel_collection.out  babel_datetimeoffset.out  sys-dm_os_host_info-vu-verify.out
test/JDBC/input/: BABEL-SP_COLUMN_PRIVILEGES.mix  BABEL-SP_TABLE_PRIVILIGES-vu-verify.sql  BABEL-UNSUPPORTED.sql  babel_collation.sql  babel_collection.sql  babel_cursor.sql
test/JDBC/input/dml/: babel_extra_join_test_cases.sql  babel_output_in_dml.sql
test/JDBC/input/errorHandling/: TestSimpleErrorsWithImplicitTran.txt
test/JDBC/input/ownership/: BABEL-LOGIN-vu-verify.mix
test/JDBC/input/storedProcedures/: Test-sp_set_session_context-vu-verify.mix
test/JDBC/input/views/: sys-syscolumns.sql
test/JDBC/src/main/java/com/sqlsamples/: batch_run.java
test/JDBC/src/main/resources/: config.txt
test/JDBC/src/test/java/com/sqlsamples/: TestQueryFile.java
